--- a/main.css
+++ b/main.css
@@ -95,7 +95,10 @@ header img{
 }
 
 .product img{
-    width: 100%;
+    max-width: 100%;
+    max-height: 190px;
+    width: auto;
+    margin: 10px 0;
 }
 
 .product .product-title,
@@ -235,4 +238,8 @@ header img{
 #viewed .product{
     width: 100%;
     margin: 20px 0;
+}
+
+#viewed .product img{
+    width: 100%;
 }
